manifests/frontend-service.yml
apiVersion: v1
kind: Service

metadata:
  name: frontend
  namespace: taskapp

spec:
  selector:
    app: frontend

  ports:
    - port: 80
      targetPort: 80

  type: ClusterIP
