manifests/postgres-service.yml
apiVersion: v1
kind: Service

metadata:
  name: postgres
  namespace: taskapp

spec:
  clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
      targetPort: 5432
