manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: taskapp-ingress
  namespace: taskapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

spec:
  ingressClassName: traefik

  tls:
    - hosts:
        - 5fty3.name.ng
      secretName: taskapp-tls

  rules:
    - host: 5fty3.name.ng
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80

          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 5000
